leo3/tests/ui/leanclass_generic_struct.rs
use leo3::prelude::*;

#[leanclass]
struct BadGeneric<T> {
    value: T,
}

fn main() {}
